fix(*): layout problems were solved.

--- a/src/app/form-ge/form-ge.component.scss
+++ b/src/app/form-ge/form-ge.component.scss
@@ -1927,10 +1927,6 @@ label.input-terms-label {
   height: none;
 }
 
-.height-inputs {
-  height: 48px !important;
-}
-
 .mat-option {
   color: black !important
 }
