--- a/src/app/form-gv/form-gv.component.scss
+++ b/src/app/form-gv/form-gv.component.scss
@@ -1966,7 +1966,6 @@ float label
 
 @media(min-width: 601px) {
   .form-group {
-    height: 48px !important;
     background-color: #ED472D !important;
   }
 
@@ -2028,7 +2027,6 @@ float label
 
 @media(max-width: 600px) {
   .form-group {
-    height: 48px !important;
     background-color: #ED472D !important;
   }
 
